[gd_scene load_steps=13 format=3 uid="uid://dy8yek6xyrvd4"]

[ext_resource type="Script" path="res://src/scripts/MainScene.gd" id="1_main"]
[ext_resource type="PackedScene" uid="uid://bqqax4c73b0dl" path="res://assets/AssetCokpit.glb" id="2_cockpit"]
[ext_resource type="Script" uid="uid://dv7j2bbpk73ru" path="res://src/scripts/CockpitCamera.gd" id="3_camera"]
[ext_resource type="PackedScene" path="res://src/scenes/PlayerInventory.tscn" id="4_inventory"]
[ext_resource type="PackedScene" uid="uid://c7x18j7x7x7x7" path="res://src/scenes/Crosshair.tscn" id="5_crosshair"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_rr2wm"]
sky_top_color = Color(0, 0.41568628, 0.7764706, 1)
sky_horizon_color = Color(0.52585006, 0.6952424, 0.8508813, 1)
ground_bottom_color = Color(0.435773, 0.51849985, 0.6767904, 1)
ground_horizon_color = Color(0.6745098, 0.79607844, 0.9098039, 1)

[sub_resource type="Sky" id="Sky_rr2wm"]
sky_material = SubResource("ProceduralSkyMaterial_rr2wm")

[sub_resource type="Environment" id="Environment_32aa5"]
background_mode = 2
sky = SubResource("Sky_rr2wm")

[sub_resource type="BoxShape3D" id="BoxShape3D_5dlwx"]
size = Vector3(0.7946167, 0.13378906, 0.76503754)

[sub_resource type="BoxShape3D" id="BoxShape3D_o81g6"]
size = Vector3(1.109375, 0.123046875, 1.010498)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dbro3"]
radius = 0.5229492
height = 1.411377

[sub_resource type="BoxShape3D" id="BoxShape3D_32aa5"]
size = Vector3(0.5459595, 0.21081543, 0.43945313)

[node name="MainScene" type="Node3D"]
script = ExtResource("1_main")

[node name="Cockpit" parent="." instance=ExtResource("2_cockpit")]

[node name="Soleil" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.9190872, 0.3940542, 0, -0.3940542, 0.9190872, 0.00072717667, 22.156654, 30.632616)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_32aa5")

[node name="Area3D" type="Area3D" parent="Cockpit/CockpitControlCenter_Mesh" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7848635, 0)

[node name="Altitude" type="CollisionShape3D" parent="Cockpit/CockpitControlCenter_Mesh/Area3D" index="0"]
transform = Transform3D(1, 0, 0, 0, -0.26250923, 0.96492946, 0, -0.96492946, -0.26250923, -0.0030789375, 1.8070173, -0.6499545)
shape = SubResource("BoxShape3D_5dlwx")

[node name="BoutonLanceDes" type="CollisionShape3D" parent="Cockpit/CockpitControlCenter_Mesh/Area3D" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0010900795, 0.74222946, 0.07071304)
shape = SubResource("BoxShape3D_32aa5")

[node name="CamPilote" type="Camera3D" parent="Cockpit/CockpitControlCenter_Mesh/Pilote/CouPilote" index="0"]
transform = Transform3D(0.9840841, 0.017069133, -0.17688142, 0, 0.9953761, 0.09605422, 0.1777031, -0.094525434, 0.97953385, -3.1945784, 5.8546424, 4.1857986)
fov = 57.898506
script = ExtResource("3_camera")

[node name="CamCopilote" type="Camera3D" parent="Cockpit/CockpitControlCenter_Mesh/Copilote/CouCopilote" index="0"]
transform = Transform3D(0.97245955, -0.022387546, 0.23199429, -3.7252903e-09, 0.99537617, 0.09605422, -0.233072, -0.093408845, 0.9679629, 3.2066963, 5.854643, 3.9912052)
fov = 57.898506
script = ExtResource("3_camera")

[node name="PilotInventory" parent="." instance=ExtResource("4_inventory")]

[node name="CopilotInventory" parent="." instance=ExtResource("4_inventory")]
is_pilot = false

[node name="Crosshair" parent="." instance=ExtResource("5_crosshair")]
